  b - Fix so gpu count gets written out to server nodes file when using
      --enable-nvidia-gpus. TRQ-927. (backported from 4.0.2)
  b - collapse the cpuset buffer into ranges in order to allow very large cpu ranges to
      be written into the cpuset. TRQ-928
  b - fixed a memory leak on the MOM when running with --enable-nvidia-gpus. TRQ-904
      (merged from revision 6125 of 2.5-fixes)
     

3.0.5
  b - fix for writing too much data when job_script is saved to job log.
  b - fix for where pbs_mom would not automatically set gpu mode.
  b - fix for alligning qstat -r output when configured with -DTXT.
  e - Change size of transfer block used on job rerun from 4k to 64k.
  b - With nvidia gpus, TORQUE was losing the directive of what nodes it should
      run the job on from Moab. Corrected.
  e - add the $PBS_WALLTIME variable to jobs, thanks to a patch from Mark Roberts 
  n - change moab_array_compatible server parameter so it defaults to true
  b - fix so comma separated file list can be used with qsub -W stagein/stageout.
      Matches qsub documentation again. (backported from 4.0.1)
  e - change to allow pbs_mom to run if configured with --enable-nvidia-gpus but
      installed on a node without Nvidia gpus.
  b - fix for where pbsnodes displays outdated gpu_status information.
  b - Fixed a problem where starting pbs_mom with the default -p option would delete
      running jobs instead of trying to recover them if cpusets were enabled. TRQ-828
      Fixes Bugzilla 174.
  b - Added a check for a NULL job pointer in modify_job. This fixes TRQ-818
  b - fix problem with '+ and segfault when using multiple node gpu requests.
      (backported from 4.0.1)
  b - fix problem with mom segfault when using 8 or more gpus on mom node.
      (backported from 4.0.1)
  b - Fixed a bug for NUMA cpusets where Nodes were being underallocated for the job.
      TRQ-845
  b - Fixed a problem with cpusets where if a boot cpuset is present under /dev/cpuset